<resources>
    <string name="app_name">MyChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="developed_by_developer_ahmed_2025">Developed by Developer Ahmed 2025 ©</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_name">Enter name</string>
    <string name="already_got_an_account_login">Already got an account? Login</string>
    <string name="chat_app">Chat App</string>
</resources>